test-cases/negative/test_148_variable_without_type.lay
# negative test: variable declaration without type
# expected: parser should reject this

the variable x is 5


